#41, change theme-color

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="portofolio, yusuf, ayuba, luwuk" />
     <meta name="author" content="Yusuf Ayuba" />
     
-    <meta name="theme-color" content="#4caf50" />
+    <meta name="theme-color" content="#009ee8" />
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
