--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="shortcut icon" href="https://s3-id-jkt-1.kilatstorage.id/cdn-yusufayuba/assets/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Personal Website Portofolio" />
     <meta name="keywords" content="portofolio, yusuf, ayuba, luwuk" />
